# make_it_dense

./: .gitignore  Makefile  README.md  pyproject.toml
apps/: dump_training_data.py  precache.py  refusion_pipeline.py  test_scan.py  train.py
config/: kitti.yaml
src/make_it_dense/dataset/: __init__.py  kitti_sequence.py  kitti_vdb_multiseq.py  kitti_vdb_sequence.py
src/make_it_dense/evaluation/: __init__.py  scan_complete.py
src/make_it_dense/loss/: __init__.py  sdf_loss.py
src/make_it_dense/models/: __init__.py  atlas.py  blocks3d.py  completion_net.py
src/make_it_dense/utils/: __init__.py  cache.py  config.py  data.py  vdb_utils.py
